karl package Changelog
======================

3.104 (2012-12-03)
------------------

- Fixed 'came_from' redirect when using Kerberos login.

- Fix recent activity table layout in my profile pushdown. (LP #1068169)

- Make grid and search options font larger. (LP #1068147)

- Make sure that open blob files passed into repozitory get closed. (LP 
  #1081282)

3.103 (2012-11-29)
------------------

- Fix permission of the ajaxian Delete, MoveTo button actions in the Files grid.
  Affects both ux1 and ux2. (LP #1084066)

- Fix permission of the ajaxian file upload.
  Affects both ux1 and ux2. (LP #1084066)

3.102 (2012-11-21)
------------------

- Make sure generate_stats script calls set_current_instance. (LP #1067453)

- Make center section on intranets narrower to avoid breaking the layout.
  (LP #1068190).

- Fix css conflict that caused reference manual add buttons to disappear.
  (LP #1068200)

3.101 (2012-11-20)
------------------

- Fixed link to login form in the password reset completed page.
  (LP #1080834).

- Fixed bug in profile display introduced by new Chrome version.
  (LP #1078319)

- Don't break in impersonate login plugin if the value to the left of the colon
  ':' character in the password field is not an actual user.  It is possible
  that some users might actually have passwords which contain colons. (LP 
  #1080760)

- Migrate admin section to ux2 (LP #1043537).

- Avoid error when reference manual marker is removed from a folder and an
  intranet layout is used. (LP #1059559)

- Fixed word wrap problem in recent activity portlet. (LP #1057065)

- Removed intranets link from global nav and made logo link to that when
  inside an intranet. (LP #1053624).

3.100 (2012-11-15)
------------------

- Fix the Add / Edit Event forms, to show the All Day checkbox in ux2. (LP #1060342)

- Fix the position of the option panel in the UX2 wiki index (LP #1057067)

- Implement left-right chevrons in the option panel toggle button 